SLING-8311 - Investigate creating a Sling CLI tool for development task automation
* added support for updating a release in the Apache Reporter System
* added a service for extracting the user's credentials from the environment
* switched Docker image to the openjdk11 provided by azul
* used jlink to create a minimal JRE